--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="table-cell">
           <div class="container">
             <!--<p class="display-6 color-d">Hello, world!</p>-->
-            <h1 class="intro-title mb-4">I am Chuttoo Jayesh Sharma</h1>
+            <h1 class="intro-title mb-4">I am   Jayesh  </h1>
             <p class="intro-subtitle">
               <span class="text-slider-items"
                 >Web Developer,Web Designer,Fullstack Developer,Graphic
