--- a/index.html
+++ b/index.html
@@ -222,18 +222,21 @@
                         aria-valuemin="0"
                         aria-valuemax="100"
                       ></div>
-                    </div>
-                    <span>C#</span>
+                    </div><span>C#</span>
                     <!-- <span class="pull-right">40%</span> -->
                     <div class="progress">
-                      <div
-                        class="progress-bar"
-                        role="progressbar"
-                        style="width: 40%"
-                        aria-valuenow="40"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                      ></div>
+                      <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
+                        aria-valuemax="100"></div>
+                    </div><span>PowerApps</span>
+                    <!-- <span class="pull-right">40%</span> -->
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="40" aria-valuemin="0"
+                        aria-valuemax="100"></div>
+                    </div><span>Power Automate</span>
+                    <!-- <span class="pull-right">40%</span> -->
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="40" aria-valuemin="0"
+                        aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
