--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="col-md-6">
               <div class="about-me pt-4 pt-md-0">
                 <div class="title-box-2">
-                  <h5 class="title-left">About me</h5>
+                  <h5 class="title-left">About Me</h5>
                 </div>
                 <p class="lead">
                   Hey there! 👋 I'm Chuttoo Jayesh Sharma, a passionate
