--- a/index.html
+++ b/index.html
@@ -178,48 +178,47 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="about-me pt-4 pt-md-0">
-                <div class="title-box-2">
-                  <h5 class="title-left">About Me</h5>
+              <div class="col-md-6">
+                <div class="about-me pt-4 pt-md-0">
+                  <div class="title-box-2">
+                    <h5 class="title-left">About me</h5>
+                  </div>
+                  <p class="lead">
+                    Hey there! 👋 I'm Chuttoo Jayesh Sharma, a passionate
+                    software engineering student who loves diving into
+                    challenges headfirst. I've been in the game for a while
+                    now, having participated twice in competitions like WebCup
+                    and DigiCup, and have worked on numerous projects for
+                    clients and NGOs as a freelance developer.
+                  </p>
+                  <p class="lead">
+                    My journey in the world of web development has been
+                    thrilling. I've tinkered with a variety of websites,
+                    implementing APIs, crafting complex algorithms, and
+                    bringing ideas to life through code. Each project has been
+                    a learning experience, pushing me to grow and evolve as a
+                    developer.
+                  </p>
+                  <p class="lead">
+                    What sets me apart? My ambition and eagerness to learn. I
+                    thrive on challenges, always seeking out new opportunities
+                    to expand my skills and tackle problems from fresh
+                    perspectives. Plus, I'm a friendly face in the tech world,
+                    ready to collaborate and build meaningful connections
+                    along the way.
+                  </p>
+                  <p class="lead">
+                    So, whether you're looking to revamp your website,
+                    integrate cutting-edge technologies, or embark on a new
+                    digital venture, I'm here to help. Let's team up and turn
+                    your ideas into reality!
+                  </p>
                 </div>
-                <p class="lead">
-                  Hey there! 👋 I'm Chuttoo Jayesh Sharma, a passionate
-                  software engineering student who loves diving into
-                  challenges headfirst. I've been in the game for a while
-                  now, having participated twice in competitions like WebCup
-                  and DigiCup, and have worked on numerous projects for
-                  clients and NGOs as a freelance developer.
-                </p>
-                <p class="lead">
-                  My journey in the world of web development has been
-                  thrilling. I've tinkered with a variety of websites,
-                  implementing APIs, crafting complex algorithms, and
-                  bringing ideas to life through code. Each project has been
-                  a learning experience, pushing me to grow and evolve as a
-                  developer.
-                </p>
-                <p class="lead">
-                  What sets me apart? My ambition and eagerness to learn. I
-                  thrive on challenges, always seeking out new opportunities
-                  to expand my skills and tackle problems from fresh
-                  perspectives. Plus, I'm a friendly face in the tech world,
-                  ready to collaborate and build meaningful connections
-                  along the way.
-                </p>
-                <p class="lead">
-                  So, whether you're looking to revamp your website,
-                  integrate cutting-edge technologies, or embark on a new
-                  digital venture, I'm here to help. Let's team up and turn
-                  your ideas into reality!
-                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     </div>
   </section>
 
